Changed basic index.html structure

--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
-<div>
-    <h1>Hello world commited from laptop</h1>
-</div>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Title of the document</title>
+</head>
+
+<body>
+    Content of the document......
+</body>
+
+</html>
