--- a/index.html
+++ b/index.html
@@ -3,11 +3,136 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Title of the document</title>
+    <title>The Mese portfolio</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
-    Content of the document......
+    <div class="container-fluid">
+        <div class="row">
+            <h1 class="col-md-8">Welcome to my website! - Warning: website in construction!!</h1>
+            <div class="col-md-8 webContent">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="panel panel-default paragraphContent" id="aboutMeParagraph">
+                            <div class="panel-heading">
+                                <h3 class="panel-title">About me</h3>
+                            </div>
+                            <div class="panel-body">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse commodo odio massa, sit amet finibus libero sodales
+                                et. Vestibulum maximus sodales nisi, nec dignissim tortor. Maecenas et elit vitae massa luctus
+                                auctor lacinia et sapien. Sed dignissim blandit magna vitae faucibus. Proin non vulputate
+                                turpis. Nullam placerat mauris ut erat pellentesque lacinia. Pellentesque auctor eu justo
+                                vitae malesuada. Cras id mi lorem. Aenean ultrices sed quam sit amet sodales. Proin hendrerit
+                                sapien mi, quis dapibus massa iaculis quis. Quisque sed venenatis lacus. Class aptent taciti
+                                sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin vestibulum
+                                mauris vitae molestie suscipit. In hac habitasse platea dictumst. Donec a faucibus nibh.
+                                Curabitur malesuada luctus magna, ut iaculis turpis euismod quis. Aliquam congue, quam vitae
+                                mattis dapibus, augue felis vehicula massa, ut ornare dolor erat at erat. Donec in nisi ac
+                                mauris consequat luctus. Donec at ipsum erat. Nulla ac lorem vel orci consectetur posuere
+                                tincidunt rhoncus erat. Proin sagittis ultricies rhoncus. Vivamus mi sem, rutrum id laoreet
+                                at, ultricies at massa. Nunc sed elit nunc. Mauris varius mollis imperdiet. Praesent sagittis
+                                sollicitudin massa vel scelerisque. Ut auctor nisi eu ultrices pellentesque. Donec at hendrerit
+                                odio. Duis dignissim malesuada dolor, nec pellentesque massa tempus eget. Phasellus lacus
+                                nisi, ullamcorper et erat convallis, ultrices pharetra justo.
+                            </div>
+                        </div>
+                        <div class="panel panel-default paragraphContent" id="experienceParagraph">
+                            <div class="panel-heading">
+                                <h3 class="panel-title">Experience</h3>
+                            </div>
+                            <div class="panel-body">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse commodo odio massa, sit amet finibus libero sodales
+                                et. Vestibulum maximus sodales nisi, nec dignissim tortor. Maecenas et elit vitae massa luctus
+                                auctor lacinia et sapien. Sed dignissim blandit magna vitae faucibus. Proin non vulputate
+                                turpis. Nullam placerat mauris ut erat pellentesque lacinia. Pellentesque auctor eu justo
+                                vitae malesuada. Cras id mi lorem. Aenean ultrices sed quam sit amet sodales. Proin hendrerit
+                                sapien mi, quis dapibus massa iaculis quis. Quisque sed venenatis lacus. Class aptent taciti
+                                sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin vestibulum
+                                mauris vitae molestie suscipit. In hac habitasse platea dictumst. Donec a faucibus nibh.
+                                Curabitur malesuada luctus magna, ut iaculis turpis euismod quis. Aliquam congue, quam vitae
+                                mattis dapibus, augue felis vehicula massa, ut ornare dolor erat at erat. Donec in nisi ac
+                                mauris consequat luctus. Donec at ipsum erat. Nulla ac lorem vel orci consectetur posuere
+                                tincidunt rhoncus erat. Proin sagittis ultricies rhoncus. Vivamus mi sem, rutrum id laoreet
+                                at, ultricies at massa. Nunc sed elit nunc. Mauris varius mollis imperdiet. Praesent sagittis
+                                sollicitudin massa vel scelerisque. Ut auctor nisi eu ultrices pellentesque. Donec at hendrerit
+                                odio. Duis dignissim malesuada dolor, nec pellentesque massa tempus eget. Phasellus lacus
+                                nisi, ullamcorper et erat convallis, ultrices pharetra justo.
+                            </div>
+                        </div>
+                        <div class="panel panel-default paragraphContent" id="skillsParagraph">
+                            <div class="panel-heading">
+                                <h3 class="panel-title">Skills</h3>
+                            </div>
+                            <div class="panel-body">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse commodo odio massa, sit amet finibus libero sodales
+                                et. Vestibulum maximus sodales nisi, nec dignissim tortor. Maecenas et elit vitae massa luctus
+                                auctor lacinia et sapien. Sed dignissim blandit magna vitae faucibus. Proin non vulputate
+                                turpis. Nullam placerat mauris ut erat pellentesque lacinia. Pellentesque auctor eu justo
+                                vitae malesuada. Cras id mi lorem. Aenean ultrices sed quam sit amet sodales. Proin hendrerit
+                                sapien mi, quis dapibus massa iaculis quis. Quisque sed venenatis lacus. Class aptent taciti
+                                sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin vestibulum
+                                mauris vitae molestie suscipit. In hac habitasse platea dictumst. Donec a faucibus nibh.
+                                Curabitur malesuada luctus magna, ut iaculis turpis euismod quis. Aliquam congue, quam vitae
+                                mattis dapibus, augue felis vehicula massa, ut ornare dolor erat at erat. Donec in nisi ac
+                                mauris consequat luctus. Donec at ipsum erat. Nulla ac lorem vel orci consectetur posuere
+                                tincidunt rhoncus erat. Proin sagittis ultricies rhoncus. Vivamus mi sem, rutrum id laoreet
+                                at, ultricies at massa. Nunc sed elit nunc. Mauris varius mollis imperdiet. Praesent sagittis
+                                sollicitudin massa vel scelerisque. Ut auctor nisi eu ultrices pellentesque. Donec at hendrerit
+                                odio. Duis dignissim malesuada dolor, nec pellentesque massa tempus eget. Phasellus lacus
+                                nisi, ullamcorper et erat convallis, ultrices pharetra justo.
+                            </div>
+                        </div>
+                        <div class="panel panel-default paragraphContent" id="contactParagraph">
+                            <div class="panel-heading">
+                                <h3 class="panel-title">Contact</h3>
+                            </div>
+                            <div class="panel-body">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse commodo odio massa, sit amet finibus libero sodales
+                                et. Vestibulum maximus sodales nisi, nec dignissim tortor. Maecenas et elit vitae massa luctus
+                                auctor lacinia et sapien. Sed dignissim blandit magna vitae faucibus. Proin non vulputate
+                                turpis. Nullam placerat mauris ut erat pellentesque lacinia. Pellentesque auctor eu justo
+                                vitae malesuada. Cras id mi lorem. Aenean ultrices sed quam sit amet sodales. Proin hendrerit
+                                sapien mi, quis dapibus massa iaculis quis. Quisque sed venenatis lacus. Class aptent taciti
+                                sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin vestibulum
+                                mauris vitae molestie suscipit. In hac habitasse platea dictumst. Donec a faucibus nibh.
+                                Curabitur malesuada luctus magna, ut iaculis turpis euismod quis. Aliquam congue, quam vitae
+                                mattis dapibus, augue felis vehicula massa, ut ornare dolor erat at erat. Donec in nisi ac
+                                mauris consequat luctus. Donec at ipsum erat. Nulla ac lorem vel orci consectetur posuere
+                                tincidunt rhoncus erat. Proin sagittis ultricies rhoncus. Vivamus mi sem, rutrum id laoreet
+                                at, ultricies at massa. Nunc sed elit nunc. Mauris varius mollis imperdiet. Praesent sagittis
+                                sollicitudin massa vel scelerisque. Ut auctor nisi eu ultrices pellentesque. Donec at hendrerit
+                                odio. Duis dignissim malesuada dolor, nec pellentesque massa tempus eget. Phasellus lacus
+                                nisi, ullamcorper et erat convallis, ultrices pharetra justo.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 sideMenu">
+                <ul class="sideMenu-inner">
+                    <a href="#aboutMeParagraph">
+                        <li>About me</li>
+                    </a>
+                    <a href="#experienceParagraph">
+                        <li>Experience</li>
+                    </a>
+                    <a href="#skillsParagraph">
+                        <li>Skills</li>
+                    </a>
+                    <a href="#contactParagraph">
+                        <li>Contact</li>
+                    </a>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+        crossorigin="anonymous" async></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+        crossorigin="anonymous" async></script>
 </body>
 
 </html>
